[project]
name = "rp-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "urlopen (>=1.0.0,<2.0.0)",
    "plotly (>=6.2.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "rp_poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
